fix experiences spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -1343,7 +1343,7 @@ a {
 }
 
 .awards-item-text {
-    width: 53vw;
+    width: 52vw;
 	text-align: left;  
     margin: 0;
     padding: 0;
@@ -1351,7 +1351,7 @@ a {
 
 @media (min-width: 400px) {
 	.awards-item-text {
-		width: 56vw;
+		width: 54vw;
 	}
 }
 
@@ -1377,7 +1377,7 @@ a {
 
 .awards-item-description {
     margin: 0;
-    padding-left: 3em;
+    padding-left: 2em;
 }
 
 .awards-item-date {
